test/sema/struct_invalid_member_type.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
struct S {
    nested: INVALID,
    // CHECK: [[# @LINE - 1 ]]:13: error: symbol 'INVALID' not found
}

fn main() -> void {
}